<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoTeTo</string>
    <string name="app_name_full">MoTeTo - Mobile Testing Tool v0.1</string>
    
    <string name="open_test">Open Test</string>
    <string name="tests">Tests</string>
    <string name="test">Test</string>
    <string name="properties">Properties</string>
    <string name="help">Help</string>        
    <string name="continue_">Continue</string><!--continue is reserved keyword-->
    <string name="log">Log</string>
    <string name="session">Session</string>
    <string name="map">Map</string>
    <string name="tasklist">Tasklist</string>
    <string name="stream">Stream</string>
    
    <string name="name">Name: </string>
    
    <string name="general">General</string>
    <string name="next_task_auto">Auto next task</string>
    <string name="next_task_auto_detail">Automatically switches to next task</string>
    <string name="address">Address</string>        
    <string name="address_detail">Stream source IP address</string>        
    <string name="max_fps">Max FPS</string>
    <string name="max_fps_detail">Max FPS of video stream</string>
    <string name="enabled">Enabled</string>
    <string name="enabled_detail">Enables video stream</string>
    <string name="workspace">Workspace folder</string>
    <string name="workspace_detail">Sets workspace folder</string>    
    
    <string name="help_first">1. Use double flick gesture to navigate among screens</string>
    <string name="help_second">Tasklist &lt;=&gt; Log &lt;=&gt; Map &lt;=&gt; Stream</string>
    <string name="help_third">2. Use gestures to insert markers in log screen</string>
    
    <string name="new_session">New session</string>
    <string name="sessions">Sessions</string>
    
    <string name="load">Load</string>
    <string name="start_session">Start New Session</string>
    
    <string name="add_note">Write note</string>
    <string name="add_note_btn">Add</string>
    
    <string name="ok">OK</string>
    <string name="error_loading_test">Error loading test!</string>
    <string name="error_loading_session">Error loading session!</string>
    
</resources>