<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/widget52"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/widget53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView  
            android:id="@+id/textView1"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/help_first"        
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"/>  
        <TextView  
            android:id="@+id/textView2"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/help_second"        
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"/>  
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gesto_double_flick" />
        <TextView  
            android:id="@+id/textView3"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/help_third"        
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"/>  
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gesto_vysledky_ukolu" />
 
        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_" />
        <TextView  
            android:id="@+id/textView1"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/app_name_full"        
            android:ellipsize="none"
            android:maxLines="100"
            android:scrollHorizontally="false"/>  
    </LinearLayout>
</ScrollView>
